--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "fuse.js": "^7.0.0",
     "js-confetti": "^0.12.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
