--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.4",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^18.3.1",
+    "react-fuzzy": "^1.3.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
